--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   flame: ^1.18.0
+  flame_audio: ^2.10.2
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
@@ -21,3 +23,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/audio/
